<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_graph"
        app:startDestination="@id/fragment_list">

    <fragment
            android:id="@+id/fragment_list"
            android:name="com.fan.bookmanagement.fragments.ListFragment"
            android:label="@string/list_fragment_label"
            tools:layout="@layout/fragment_list">

        <action
                android:id="@+id/action_fragment_list_to_fragment_add"
                app:destination="@id/fragment_add" />
        <action
                android:id="@+id/action_fragment_list_to_fragment_update"
                app:destination="@id/fragment_update" />
    </fragment>
    <fragment
            android:id="@+id/fragment_add"
            android:name="com.fan.bookmanagement.fragments.AddFragment"
            android:label="@string/add_fragment_label"
            tools:layout="@layout/fragment_add">

        <action
                android:id="@+id/action_fragment_add_to_fragment_list"
                app:destination="@id/fragment_list" />
    </fragment>
    <fragment
            android:id="@+id/fragment_update"
            android:name="com.fan.bookmanagement.fragments.UpdateFragment"
            android:label="@string/update_fragment_label"
            tools:layout="@layout/fragment_update">

        <action
                android:id="@+id/action_fragment_update_to_fragment_list"
                app:destination="@id/fragment_list" />
    </fragment>
</navigation>